completes through phase 3

--- a/skeleton/friends.html
+++ b/skeleton/friends.html
@@ -20,7 +20,32 @@
 </head>
 <body>
 
-  <!-- YOUR HTML HERE -->
+  <header class="header">
+    <nav class="header-nav">
+      <h1 class="header-logo">
+        <a href="http://google.com">App Academy Friends</a>
+      </h1>
+      <ul class="header-list">
+        <li class="header-item dropdown">
+          <a href="#">Notifications <a class="badge">3</a></a>
+          <ul class="notification-list">
+            <li class="notification">"Peter Yi poked you"</li>
+            <li class="notification">"Laurie wants to be your friend"</li>
+            <li class="notification">"Oprah wants to give you a car"</li>
+          </ul>
+        </li>
+
+
+        <li class="header-item"><a href="#">Profile</a></li>
+        <li class="header-item"><a href="#">Settings</a></li>
+      </ul>
+    </nav>
+  </header>
+  <nav class="content group">
+    <article class="content-sidebar">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</article>
+    <article class="content-main"></article>
+  </nav>
+
 
   <script src="../shared/js/jquery.js"></script>
   <script>
